# llm-continuator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
llm_continuator/: __init__.py  config.py  core.py  detectors.py  exceptions.py  stitchers.py
llm_continuator/providers/: __init__.py  anthropic_provider.py  base.py  huggingface_provider.py  openai_provider.py
tests/: test_config.py  test_core.py  test_detectors.py  test_providers.py  test_stitchers.py
